# dataforge-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  benchmark.py  phase4_benchmark.json  phase5_benchmark.json  pre_phase4_baseline.json  pyproject.toml  release-please-config.json
.github/workflows/: benchmarks.yml  ci.yml  integrations.yml  publish.yml  release-please.yml
examples/: 01_timeseries.py  02_schema_inference.py  03_chaos_testing.py  04_constraints.py  05_anonymizer.py  06_database_seeding.py  07_openapi_import.py  08_streaming.py  09_tui.py  10_real_world_scenarios.py
src/dataforge/: __init__.py  anonymizer.py  backend.py  chaos.py  cli.py  constraints.py  core.py  decorators.py  inference.py  openapi.py  registry.py  relational.py  schema.py  schema_io.py  seeder.py  streaming.py  timeseries.py  unique.py
src/dataforge/data/correlations/: geo.py
src/dataforge/locales/ar_SA/: address.py  company.py  person.py
src/dataforge/locales/da_DK/: __init__.py  address.py  company.py  internet.py  person.py  phone.py
src/dataforge/locales/de_DE/: address.py  person.py
src/dataforge/locales/en_AU/: address.py  company.py  person.py
src/dataforge/locales/en_CA/: address.py  company.py  person.py
src/dataforge/locales/en_GB/: address.py  company.py  person.py
src/dataforge/locales/en_US/: address.py  company.py  person.py
src/dataforge/locales/es_ES/: address.py  person.py
src/dataforge/locales/fi_FI/: __init__.py  address.py  company.py  internet.py  person.py  phone.py
src/dataforge/locales/fr_FR/: address.py  person.py
src/dataforge/locales/hi_IN/: address.py  company.py  person.py
src/dataforge/locales/it_IT/: company.py  person.py
src/dataforge/locales/ja_JP/: address.py  person.py
src/dataforge/locales/ko_KR/: company.py  person.py
src/dataforge/locales/nb_NO/: __init__.py  address.py  company.py  internet.py  person.py  phone.py
src/dataforge/locales/nl_NL/: address.py  company.py  person.py
src/dataforge/locales/pl_PL/: address.py  company.py  person.py
src/dataforge/locales/pt_BR/: company.py  person.py
src/dataforge/locales/ru_RU/: address.py  company.py  person.py
src/dataforge/locales/sv_SE/: __init__.py  address.py  company.py  internet.py  person.py  phone.py
src/dataforge/locales/tr_TR/: __init__.py  address.py  company.py  internet.py  person.py  phone.py
src/dataforge/locales/zh_CN/: company.py  person.py
src/dataforge/providers/: address.py  ai_prompt.py  automotive.py  barcode.py  base.py  color.py  company.py  crypto.py  datetime.py  ecommerce.py  education.py  file.py  finance.py  food.py  geo.py  government.py  hardware.py  internet.py  legal.py  llm.py  logistics.py  lorem.py  medical.py  misc.py  music.py  network.py  payment.py  person.py  phone.py  profile.py  real_estate.py  science.py  social_media.py  sports.py  text.py  weather.py
src/dataforge/tui/: __init__.py  app.py
tests/: test_address.py  test_advanced_realism.py  test_ai_chat.py  test_ai_prompt.py  test_anonymizer.py  test_automotive.py  test_backend.py  test_barcode.py  test_bulk.py  test_chaos.py  test_cli.py  test_color.py  test_company.py  test_constraints.py  test_core.py  test_crypto.py  test_datetime.py  test_education.py  test_file.py  test_finance.py  test_inference.py  test_integrations.py  test_internet.py  test_llm.py  test_locales.py  test_locales_new.py  test_lorem.py  test_misc.py  test_network.py  test_openapi.py  test_person.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phone.py  test_profile.py  test_pytest_plugin.py  test_registration.py  (+7 more)
